
  o Minor feature (controller):
    - You can now use the ControlSocket option to tell Tor to listen for
      controller connections on Unix domain sockets on systems that support
      them.  (Patch from Peter Palfrader.)

  o Minor bugfixes (directory):
    - Fix another crash bug related to extra-info caching.  (Bug found by
      Peter Palfrader.) [Bugfix on 0.2.0.2-alpha]

  o Minor bugfixes (dns):
    - Fix a crash when DNSPort is set more than once. (Patch from Robert
      Hogan.) [Bugfix on 0.2.0.2-alpha]
    - Add DNSPort connections to the global connection list, so that we
      can time them out correctly. (Bug found by mwenge) [Bugfix on
      0.2.0.2-alpha]

  o Minor bugfixes (hidden services):
    - Stop tearing down the whole circuit when the user asks for a
      connection to a port that the hidden service didn't configure.
      Resolves bug 444.  [Bugfix on 0.1.2.x]

  o Minor bugfixes (versioning):
    - Stop under-counting the number of authorities that recommend each
      version. [Bugfix on 0.1.2.x]


Changes in version 0.2.0.2-alpha - 2007-06-02
  o Major bugfixes on 0.2.0.1-alpha:
    - Fix an assertion failure related to servers without extra-info digests.
      Resolves bugs 441 and 442.

  o Minor features (directory):
    - Support "If-Modified-Since" when answering HTTP requests for
      directories, running-routers documents, and network-status documents.
      (There's no need to support it for router descriptors, since those
      are downloaded by descriptor digest.)

  o Minor build issues:
    - Clear up some MIPSPro compiler warnings.
    - When building from a tarball on a machine that happens to have SVK
      installed, report the micro-revision as whatever version existed
      in the tarball, not as "x".


Changes in version 0.2.0.1-alpha - 2007-06-01
  o Major features, server usability:
    - New config options RelayBandwidthRate and RelayBandwidthBurst: