@@ -1806,6 +1806,8 @@ directory_handle_command_get(dir_connection_t *conn, const char *headers,
     }
     if (dirserv_statuses_are_old(dir_fps, if_modified_since)) {
       write_http_status_line(conn, 304, "Not modified");
+      /* no need to free dir_fps's elements, since
+       * dirserv_statuses_are_old() already did. */
       smartlist_free(dir_fps);
       return 0;
     }
